Enable text wrapping in sourcearea. Fixes #13031.

--- a/skins/kama/presets.css
+++ b/skins/kama/presets.css
@@ -25,10 +25,10 @@ For licensing, see LICENSE.md or http://ckeditor.com/license
 /* Editable regions */
 .cke_source
 {
-	font-family: 'Courier New' , Monospace;
+	font-family: 'Courier New', Monospace;
 	font-size: small;
 	background-color: #fff;
-	white-space: pre;
+	white-space: pre-wrap;
 }
 
 .cke_wysiwyg_frame, .cke_wysiwyg_div
